# AI-CODE-REVIEW-CLI

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  action.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: review.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a7b43fd2092a_initial_migration.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/engine/: __init__.py  chunker.py  github_client.py  prompts.py  reviewer.py  schemas.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  review.py  user.py
backend/app/routers/: auth.py  reviews.py  users.py
backend/app/schemas/: analytics.py  auth.py  review.py  user.py
backend/app/services/: auth_service.py  review_service.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  MobileNavContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAuth.ts  useReviewSettings.ts
frontend/src/layouts/: DashboardLayout.tsx  RootLayout.tsx
frontend/src/pages/: AnalyticsPage.tsx  CodeReviewPage.tsx  DashboardPage.tsx  GithubPRPage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReviewDetailsPage.tsx  SettingsPage.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: api.ts
frontend/src/types/: analytics.ts  review.ts
frontend/src/utils/: cn.ts
scripts/: entrypoint.sh
src/ai_codereview/: __init__.py  chunker.py  cli.py  formatter.py  github_client.py  prompts.py  reviewer.py
tests/: conftest.py  test_chunker.py  test_evaluation.py  test_formatter.py  test_reviewer.py  test_schemas.py
tests/fixtures/: expected_reviews.json  missing_error_handling.py  performance_issues.py  sql_injection.py
(+11 files in other folders)
