[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-codereview"
version = "0.1.0"
description = "AI-powered code review CLI with structured output, smart diff chunking, and GitHub Actions integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI CodeReview Contributors"},
]
keywords = ["ai", "code-review", "cli", "github", "gemini", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "PyGithub>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
]

[project.scripts]
codereview = "ai_codereview.cli:app"

[project.urls]
Homepage = "https://github.com/eldandipraneeth/AI-CODE-REVIEW-CLI"
Repository = "https://github.com/eldandipraneeth/AI-CODE-REVIEW-CLI"
Issues = "https://github.com/eldandipraneeth/AI-CODE-REVIEW-CLI/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require API keys (deselect with '-m \"not integration\"')",
]
